# Depth-not-Length

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  METHODOLOGY.md  Makefile  PLAN.md  PROMPTS.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  native.yml
competitors/: registry.yaml
competitors/envs/: cognee.txt  graphrag.txt  langchain.txt  letta.txt  mem0.txt  supermemory.txt  zep.txt
configs/: default.yaml
crates/membench-kernels/: Cargo.toml  pyproject.toml
crates/membench-kernels/src/: lib.rs
cuda/: cosine_topk.cu
dashboard/: README.md  app.py
docs/: COMPETITORS.md  FAQ.md  GLOSSARY.md  HARDWARE.md  METHODOLOGY.md  PROVENANCE.md  REPRODUCE.md  RESULTS.md  STATISTICS.md  THREATS.md  VALIDATION.md  handoff.md
docs/benchmarks/: DCBENCH.md  SYNTHETIC.md
legacy/: requirements.txt  run.py
legacy/adapters/: base.py  brief.py  fullcontext.py  mem0.py  none.py  random_context.py
legacy/agent/: llm_client.py  runner.py
legacy/benchmarks/: dcbench.py  depth_labels.jsonl  longmemeval.py  swebench.py  task.py
legacy/configs/: common.json  depth_crossover.json  headline_robustness.json  loader.py  models.json
legacy/scoring/: compliance.py  correctness.py  cost.py  tables.py
legacy/tests/: test_brief.py  test_configs.py  test_contracts.py  test_dcbench.py  test_longmemeval.py  test_mem0.py  test_random_context.py  test_scoring.py  test_swebench.py  test_tables.py
native/c/: Makefile  membench_native.c  membench_native.h
orchestrator/: go.mod  main.go
paper/: CLAIMS.md  main.tex  references.bib
paper/measured/: README.md  dossier.md  rows.jsonl  summary.md
paper/measured/synthetic_real_sonnet/: rows.jsonl  summary.md
paper/reported/: README.md  dossier.md  summary.md
reference/csharp-ndcg/: Ranking.cs  RankingTests.cs
reference/java-bm25/: pom.xml
reference/r/: critical_difference.R
results/: EVALS.md  FIGURES.md  METRICS.md  competitor_landscape.md  positioning.md  swe_context_bench.md
results/data/: README.md  all_rows_claude.jsonl  all_rows_gpt.jsonl  competitor_landscape.csv  evals.csv  metrics_matrix.csv  paper_depth_slope.csv  paper_public_benchmarks.csv  paper_realcode_pooled.csv  paper_scorecard.csv  paper_supersession.csv  paper_synthetic_compliance.csv  paper_token_economics.csv  swe_context_bench.csv
results/paper_artifacts/: INDEX.md  INDEX_batch2.md  INDEX_batch3.md  INDEX_batch4.md  INDEX_batch5.md  INDEX_batch6.md  INDEX_batch7.md  INDEX_hotpotqa.md  INDEX_mem0_h2h.md
results/paper_artifacts/tables/: T001_leaderboard_compliance_synthetic.md  T002_leaderboard_compliance_dcbench.md  T003_leaderboard_compliance_swebench.md  T004_leaderboard_compliance_all.md  T005_leaderboard_compliance_gpt.md  T006_leaderboard_recall_synthetic.md  T007_leaderboard_precision_synthetic.md  T008_leaderboard_recall_dcbench.md  T009_leaderboard_precision_dcbench.md  T010_leaderboard_recall_swebench.md  T011_leaderboard_precision_swebench.md  T012_leaderboard_mergeready.md  T013_leaderboard_chainrec.md  T014_depth_crossover_synthetic.md  T015_depth_crossover_dcbench.md  T016_depth_crossover_swebench.md  T017_depth_crossover_gpt.md  T018_depth_slope.md  T019_pn_lift_compliance.md  T020_pn_lift_recall.md  T021_pn_lift_merge-ready.md  T022_tokens_per_arm.md  T023_rot_per_arm.md  T024_cost_to_correct.md  T025_bca_ci.md  T026_bayes_superiority.md  T027_effect_sizes.md  T028_friedman_ranks.md  T029_power.md  T030_cross_model.md  T031_failure_taxonomy.md  T032_win_matrix.md  T033_ir_ndcg10_synthetic.md  T034_ir_ndcg10_dcbench.md  T035_ir_ndcg10_swebench.md  T036_ir_mrr_synthetic.md  T037_ir_mrr_dcbench.md  T038_ir_mrr_swebench.md  T039_ir_map_synthetic.md  T040_ir_map_dcbench.md  (+63 more)
schema/: graph.sql
scripts/: reproduce.ps1  reproduce.sh
src/membench/: __init__.py  cli.py  competitors.py  device.py  harness.py  manifest.py  seeding.py  types.py
src/membench/agents/: __init__.py  combos.py  runner.py  session.py
src/membench/analysis/: __init__.py  capture_experiment.py  decay_fit.py  effect_curves.py  plots.py  report.py  sweep_parallel.py  tables.py  token_economics.py
src/membench/config/: __init__.py  schema.py
src/membench/datasets/: __init__.py  base.py  capture_conditions.py  dcbench.py  depth_chain.py  depth_labeling.py  dmr.py  hotpotqa.py  locomo.py  longmemeval.py  scatter_synth.py  supersession_synth.py  swebench.py  synthetic.py
src/membench/metrics/: __init__.py  agreement.py  answer_scoring.py  area_under_depth.py  brier.py  calibration.py  compliance.py  correctness.py  cost.py  factorization.py  ir_extra.py  judge.py  pareto.py  resolution.py  retrieval.py  supersession.py
src/membench/retrieval/: __init__.py  _native.py  _text.py  base.py  bm25.py  bm25_plus.py  bm25f.py  builtin.py  cache.py  colbert_lite.py  controls.py  dense.py  embeddings.py  fusion.py  hybrid.py  hyde.py  lmdir.py  mmr.py  (+8 more)
tests/: _external_fakes.py  conftest.py  test_agents_session.py  test_analysis_decay_fit.py  test_analysis_effect_curves.py  test_analysis_plots.py  test_analysis_report.py  test_analysis_tables.py  test_analysis_token_economics.py  test_bm25.py  test_bm25_plus.py  test_bm25f.py  test_capture_experiment.py  test_colbert_lite.py  test_combos.py  test_competitors.py  test_config.py  test_control_arms.py  test_dcbench.py  test_dense.py  test_depth_chain.py  test_depth_labeling.py  test_device.py  test_dmr.py  test_e2e_golden.py  test_embeddings.py  test_external_cognee.py  test_external_graphrag.py  test_external_langchain.py  test_external_letta.py  test_external_mem0.py  test_external_supermemory.py  test_external_zep.py  test_fusion.py  test_graph_arm.py  test_graph_decay.py  test_graph_live.py  test_graph_store.py  test_graph_traversal.py  test_harness_cli.py  (+80 more)
tools/seed/: package-lock.json  package.json  tsconfig.json
(+56 files in other folders)
