[project]
name = "membench"
version = "0.1.0"
description = "Depth-stratified benchmark for structured vs. similarity-based agent memory."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "BriefBench authors" }]
keywords = [
    "agent-memory",
    "retrieval",
    "rag",
    "knowledge-graph",
    "benchmark",
    "information-retrieval",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core install is deliberately light and offline-capable: the full pipeline
# (datasets -> arms -> runner -> metrics -> stats -> tables) runs green with no
# network using the deterministic embedding + stub LLM backends. Heavy or
# network-bound dependencies (real LLM SDKs, neural rerankers, third-party
# memory systems) live in optional extras so a clean `uv sync` stays fast and
# reproducible.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "pandas>=2.1",
    "networkx>=3.2",
    "statsmodels>=0.14",
    "rank-bm25>=0.2.2",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
# Neural retrieval (dense embeddings + cross-encoder rerankers). Pulls torch.
neural = ["sentence-transformers>=2.7"]
viz = ["matplotlib>=3.8", "seaborn>=0.13"]
mcp = ["mcp>=1.2"]
# NOTE: third-party memory systems (Mem0, Zep/Graphiti, GraphRAG, Letta, Cognee,
# LangChain) are NOT listed here on purpose. Several pin mutually-incompatible
# transitive deps (e.g. cognee pins pandas==2.0.3, letta needs py>=3.11), so
# co-resolving them in one lockfile is impossible. Each runs in its own isolated
# environment defined under `competitors/envs/*.txt`; the adapters in
# `membench.retrieval.external` lazy-import and raise an actionable error with
# the exact install command if the package is absent. This isolation is also the
# methodologically honest setup — every competitor is benchmarked in the exact
# environment its own authors ship.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
    "pandas-stubs>=2.1",
]

[project.scripts]
membench = "membench.cli:app"

[project.urls]
Homepage = "https://github.com/Suketh05/BriefBench"
Repository = "https://github.com/Suketh05/BriefBench"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/membench"]

[tool.uv]
# Reproducible, locked resolution.
managed = true

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
# `legacy/` holds the original prototype, quarantined and excluded while it is
# migrated module-by-module into `src/membench`. It is deleted once migration
# completes; nothing in it ships.
extend-exclude = ["legacy"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # bugbear
    "C4",   # comprehensions
    "SIM",  # simplify
    "RUF",  # ruff-specific
    "NPY",  # numpy-specific
    "PD",   # pandas-vet
    "D",    # pydocstyle
]
ignore = [
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "N802", "N806"]  # tests need no docstrings; allow math-style names
"src/membench/theory/**" = ["N803", "N806"]  # single-letter math symbols (d, q, s0, rho, tau)
"src/membench/stats/**" = ["N803", "N806"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
# Third-party libs without complete type stubs.
module = [
    "sklearn.*",
    "rank_bm25.*",
    "statsmodels.*",
    "sentence_transformers.*",
    "mem0.*",
    "graphiti_core.*",
    "networkx.*",
    "seaborn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "slow: marks tests that are slow (deselect with '-m \"not slow\"')",
    "live: marks tests that require live network / API keys",
    "neural: marks tests that require the optional neural extra (torch)",
]
filterwarnings = ["error::DeprecationWarning"]

[tool.coverage.run]
branch = true
source = ["src/membench"]
